# hids

./: .gitignore  CMakeLists.txt  Makefile  agent.c  bootstrap.sh  main.c  modules.c  tree.h
etc/: agent.yaml
include/: agent.h  config.h  exception.h  file.h  fim.h  hids.h  logcollector.h  logger.h  module.h  shared.h  wildcard.h
src/: CMakeLists.txt  agent.c  config.c  fim.c  hids.h  logcollector.c  main.c  modules.c  tree.h
src/agent/: CMakeLists.txt  agent.h  main.cpp
src/agent/include/: config_parser.hpp  io.hpp  module.hpp
src/agent/src/: config_parser.cpp  io.cpp  main.cpp
src/fim/: CMakeLists.txt  config.c  fim.c
src/fim/include/: fim.hpp  fim_item.hpp  realtime.hpp
src/fim/src/: fim.cpp  realtime.cpp
src/logcollector/: CMakeLists.txt  config.c  logcollector.c  logcollector.cpp  logcollector.h
src/logcollector/include/: logcollector.hpp  logfile.hpp
src/logcollector/src/: logcollector.cpp  logfile.cpp
src/manager/: main.c
src/shared/: config.c  config.cpp  config.h  exception.cpp  exception.h  file.cpp  file.h  hids.c  logger.cpp  shared.h  wildcard.cpp
src/shared/config/: CMakeLists.txt
src/shared/config/include/: config.h.in
src/shared/file_op/: CMakeLists.txt
src/shared/file_op/include/: file_op.h
src/shared/hash_op/: CMakeLists.txt
src/shared/hash_op/include/: hash_op.h
src/shared/hash_op/src/: hash_op.cpp
src/shared/logger/: CMakeLists.txt
src/shared/logger/include/: logger.hpp
src/shared/time_op/: CMakeLists.txt
src/shared/time_op/include/: time_op.h
